welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: value unary_! is not a member of Unit
  if (!setPos(getMondeLargeur,getMondeHauteur)){
      ^