welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.code
override def run() {
  var cpt:Int =0
  
  
  if (!setPos(getMondeLargeur,getMondeHauteur)){
    for (i<- 0 to getMondeLargeur()-1){
      for (j<- 0 to getMondeHauteur()-1){
        setPos(i,j)      
        ecritMessage(cpt)
        cpt+=1          
      }
    }
  }
}